--- a/src/styles/DailyForecast.css
+++ b/src/styles/DailyForecast.css
@@ -5,13 +5,11 @@
   overflow-x: auto;
   scroll-behavior: smooth;
   -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
-  padding-bottom: 0.3rem;
   flex-wrap: nowrap;
   align-items: end;
   max-width: 1280px;
   margin: 0 auto;
   /* border: 1px solid green; */
-  /* padding: 0rem 1rem; */
 }
 
 .weatherDay {
@@ -28,7 +26,7 @@
   cursor: pointer;
   border-left: 1px solid #d5d5d5;
   /* border: 1px solid blue; */
-  box-shadow: 0 6px 0 #eb5038;
+  box-shadow: inset 0 -6px 0 #eb5038;
 }
 
 .weatherDay--selected {
@@ -71,7 +69,7 @@
   align-items: center;
   justify-content: flex-start;
   /* border: 1px solid red; */
-  margin-top: 0.4rem;
+  margin-top: 0.2rem;
 }
 
 .weatherDay .today {
@@ -79,7 +77,7 @@
   align-items: center;
   justify-content: flex-start;
   /* border: 1px solid red; */
-  margin-top: 0.4rem;
+  margin-top: 0.2rem;
   font-size: 1rem;
 }
 
@@ -114,7 +112,7 @@
 .weatherDay__dayOfWeek {
   display: flex;
   color: #141414;
-  font-size: 1rem;
+  font-size: 14px;
 }
 
 .weatherDay--selected .weatherDay__dayOfWeek {
@@ -122,7 +120,7 @@
 }
 
 .weatherDay__dateOfMonth {
-  font-size: 1rem;
+  font-size: 14px;
   color: #666;
 }
 
@@ -136,6 +134,7 @@
   align-items: center;
   /* border: 1px solid green; */
   width: 100%;
+  margin-bottom: 0.2rem;
 }
 
 .weatherDay--selected .weatherDay__summary {
@@ -182,7 +181,7 @@
   display: flex;
   flex-direction: column;
   /* border: 1px solid green; */
-  gap: 0.2rem;
+  gap: 0.1rem;
 }
 
 .weatherDay--selected .weatherDay__temps {
