--- a/src/styles/HourlyForecast.css
+++ b/src/styles/HourlyForecast.css
@@ -42,6 +42,7 @@
   justify-content: space-between;
   border-right: none;
   width: 4rem;
+  box-shadow: inset 0 3px 0 #eb5038;
 }
 
 .weatherByHourTempPrecipAndWind {
@@ -98,23 +99,49 @@
 /* Details panel content styling */
 
 .weatherByHourDetails {
-  /* position: relative; */
+  display: flex;
+  visibility: hidden;
+  flex-direction: column;
+  justify-content: space-between;
+  /* border: 1px solid blue; */
+  background-color: #f6f6f6;
+  width: 0rem;
+  padding: 0rem;
+  border: none;
+  -webkit-transition: width, 0.4s linear;
+  -moz-transition: width, 0.4s linear;
+  -ms-transition: width, 0.4s linear;
+  -o-transition: width, 0.4s linear;
+  transition: width, 0.4s linear;
+}
+
+.weatherByHourDetails--expanded {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   /* border: 1px solid blue; */
   background-color: #f6f6f6;
-  width: 14rem;
-  padding: 0.375rem 1.25rem;
+  width: 16.5rem;
   border-right: 1px solid #d5d5d5;
+  -webkit-transition: width, 0.4s linear;
+  -moz-transition: width, 0.4s linear;
+  -ms-transition: width, 0.4s linear;
+  -o-transition: width, 0.4s linear;
+  transition: width, 0.4s linear;
+  /* box-shadow: inset 0 3px 0 #eb5038; */
 }
 
 .weatherDetailsCondition {
   color: #141414;
-  padding-top: 0.1875rem;
+  margin-top: 0.5rem;
   display: block;
   height: 6rem;
   white-space: normal;
+  min-width: 14rem;
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+  text-wrap: no-wrap;
+  word-wrap: no-wrap;
   /* border: 1px solid blue; */
 }
 
@@ -124,23 +151,31 @@
   color: #141414;
   /* padding-top: 0.1875rem; */
   display: block;
+  text-wrap: no-wrap;
   white-space: normal;
   text-align: start;
 }
 
 .weatherDetailsRows__general {
-  padding: 13px;
-  padding-left: 0;
-  padding-top: 0;
-  padding-bottom: 1.5rem;
-  height: 4rem;
-  border-bottom: 1px solid #b0b2b4;
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+  height: fit-content;
+  min-width: 14rem;
+  text-wrap: no-wrap;
   /* border: 1px solid red; */
+  margin-bottom: 1.5rem;
 }
 
 .weatherDetailsRows__all {
-  padding: 2px;
+  display: flex;
+  flex-direction: column;
+  align-items: space-between;
   padding-bottom: 0.3rem;
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+  min-width: 14rem;
+  text-wrap: no-wrap;
+  /* border: 1px solid blue; */
 }
 
 .weatherDetailsRow {
@@ -148,6 +183,8 @@
   justify-content: flex-start;
   font-size: 0.85rem;
   padding: 0.25rem;
+  /* width: 100%; */
+  /* border: 1px solid green; */
 }
 
 .weatherDetailsRow__temp {
@@ -155,12 +192,12 @@
   justify-content: flex-start;
   align-items: center;
   font-size: 0.85rem;
-  height: 2rem;
-  padding-bottom: 0.5rem;
-  margin-bottom: 0.5rem;
-  margin-top: 0.5rem;
+  height: 2.5rem;
+  min-width: 14rem;
+  text-wrap: no-wrap;
+  border-top: 1px solid #b0b2b4;
   border-bottom: 1px solid #b0b2b4;
-  /* border: 1px solid yellow; */
+  /* border: 1px solid green; */
 }
 
 .weatherDetailsRow__precip {
@@ -168,9 +205,11 @@
   justify-content: flex-start;
   align-items: center;
   font-size: 0.85rem;
-  height: 2rem;
-  margin-bottom: 0.5rem;
-  padding-bottom: 0.5rem;
+  height: 2.5rem;
+  min-width: 14rem;
+  text-wrap: no-wrap;
+  text-align: start;
+  word-wrap: no-wrap;
   border-bottom: 1px solid #b0b2b4;
   /* border: 1px solid blue; */
 }
@@ -181,9 +220,9 @@
   text-align: start;
   align-items: center;
   font-size: 0.85rem;
-  height: 2rem;
-  margin-top: 0.5rem;
-  /* padding-bottom: 13px; */
+  height: 2.5rem;
+  min-width: 14rem;
+  text-wrap: no-wrap;
   /* border: 1px solid red; */
 }
 
@@ -236,13 +275,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 0.4rem;
   min-width: 200px;
   width: 200px;
   font-size: 14px;
   cursor: pointer;
   border-right: 1px solid #d5d5d5;
   /* border: 1px solid red; */
+  background-color: #f6f6f6;
 }
 
 .seeMoreWeatherBefore .date {
@@ -259,12 +298,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 0.4rem;
   font-size: 14px;
   width: 200px;
   min-width: 200px;
   cursor: pointer;
   /* border: 1px solid red; */
+  background-color: #f6f6f6;
 }
 
 .seeMoreWeatherAfter .date {
