--- a/src/styles/HourlyForecast.css
+++ b/src/styles/HourlyForecast.css
@@ -119,9 +119,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  /* border: 1px solid blue; */
   background-color: #f6f6f6;
-  width: 16.5rem;
+  width: 15rem;
   border-right: 1px solid #d5d5d5;
   -webkit-transition: width, 0.4s linear;
   -moz-transition: width, 0.4s linear;
@@ -137,7 +136,7 @@
   display: block;
   height: 6rem;
   white-space: normal;
-  min-width: 14rem;
+  min-width: 12.5rem;
   margin-left: 1.25rem;
   margin-right: 1.25rem;
   text-wrap: no-wrap;
@@ -160,7 +159,7 @@
   margin-left: 1.25rem;
   margin-right: 1.25rem;
   height: fit-content;
-  min-width: 14rem;
+  min-width: 12.5rem;
   text-wrap: no-wrap;
   /* border: 1px solid red; */
   margin-bottom: 1.5rem;
@@ -173,7 +172,7 @@
   padding-bottom: 0.3rem;
   margin-left: 1.25rem;
   margin-right: 1.25rem;
-  min-width: 14rem;
+  min-width: 12.5rem;
   text-wrap: no-wrap;
   /* border: 1px solid blue; */
 }
@@ -192,7 +191,7 @@
   align-items: center;
   font-size: 0.85rem;
   height: 2.5rem;
-  min-width: 14rem;
+  min-width: 12.5rem;
   text-wrap: no-wrap;
   border-top: 1px solid #b0b2b4;
   border-bottom: 1px solid #b0b2b4;
@@ -205,7 +204,7 @@
   align-items: center;
   font-size: 0.85rem;
   height: 2.5rem;
-  min-width: 14rem;
+  min-width: 12.5rem;
   text-wrap: no-wrap;
   text-align: start;
   word-wrap: no-wrap;
@@ -219,8 +218,10 @@
   text-align: start;
   align-items: center;
   font-size: 0.85rem;
-  height: 2.5rem;
-  min-width: 14rem;
+  height: auto;
+  margin-top: 0.675rem;
+  margin-bottom: 0.675rem;
+  min-width: 12.5rem;
   text-wrap: no-wrap;
   /* border: 1px solid red; */
 }
@@ -276,6 +277,7 @@
   align-items: center;
   min-width: 200px;
   width: 200px;
+  padding: 1rem;
   font-size: 14px;
   cursor: pointer;
   border-right: 1px solid #d5d5d5;
@@ -300,6 +302,7 @@
   font-size: 14px;
   width: 200px;
   min-width: 200px;
+  padding: 1rem;
   cursor: pointer;
   /* border: 1px solid red; */
   background-color: #f6f6f6;
