--- a/src/styles/DailyForecast.css
+++ b/src/styles/DailyForecast.css
@@ -156,7 +156,7 @@
   text-align: start;
   padding-left: 1rem;
   padding-right: 2rem;
-  border-left: 1px solid #141414;
+  border-left: 1px solid #8a8c8e;
   margin-left: 1rem;
   height: 100%;
   flex-basis: 55%;
