--- a/src/styles/MenuBar.css
+++ b/src/styles/MenuBar.css
@@ -303,6 +303,7 @@
     justify-content: flex-start;
     align-items: center;
     margin: 0 40px;
+    margin-left: 1.5rem;
     padding: 8px 0;
     font-weight: 700;
     border-bottom: 1px solid #e6e8ea;
@@ -320,7 +321,8 @@
     display: flex;
     font-weight: 700;
     justify-content: flex-start;
-    margin-left: 40px;
+    color: #000;
+    margin-left: 1.5rem;
     margin-right: 40px;
     margin-top: 1rem;
     margin-bottom: 0.5rem;
@@ -340,7 +342,7 @@
 
   .mobile-social-icons {
     /* border: 1px solid red; */
-    font-size: 12px;
+    font-size: 14px;
   }
 
   .mobile-social-icons a{
@@ -353,6 +355,7 @@
     justify-content: space-between;
     padding: 8px 0;
     margin: 0px 40px;
+    margin-left: 1.5rem;
     border-bottom: 1px solid #e6e8ea;
     /* border: 1px solid green; */
   }
