--- a/src/styles/HourlyForecast.css
+++ b/src/styles/HourlyForecast.css
@@ -1,3 +1,8 @@
+.chart-container {
+  /* border: 1px solid red; */
+  padding: 0rem 1rem;
+}
+
 .chart {
   /* border: 1px solid blue; */
   background-color: #f6f6f6;
@@ -9,6 +14,7 @@
   -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
   max-width: 1280px;
   margin: 0 auto;
+  margin-top: 0.5rem;
   border-left: 1px solid #e6e8ea;
   border-right: 1px solid #e6e8ea;
 }
@@ -112,11 +118,11 @@
   visibility: hidden;
   flex-direction: column;
   justify-content: space-between;
-  /* border: 1px solid blue; */
   background-color: #f6f6f6;
   width: 0rem;
   padding: 0rem;
   border: none;
+  box-shadow: inset 0 3px 0 #eb5038;
   -webkit-transition: width, 0.4s linear;
   -moz-transition: width, 0.4s linear;
   -ms-transition: width, 0.4s linear;
@@ -131,6 +137,7 @@
   background-color: #f6f6f6;
   width: 15rem;
   border-right: 1px solid #e6e8ea;
+  box-shadow: inset 0 3px 0 #eb5038;
   -webkit-transition: width, 0.4s linear;
   -moz-transition: width, 0.4s linear;
   -ms-transition: width, 0.4s linear;
@@ -148,6 +155,7 @@
   min-width: 12.5rem;
   margin-left: 1.25rem;
   margin-right: 1.25rem;
+  line-height: 1.25;
   text-wrap: no-wrap;
   word-wrap: no-wrap;
   /* border: 1px solid blue; */
@@ -157,7 +165,6 @@
   color: #333;
   font-weight: 500;
   color: #141414;
-  /* padding-top: 0.1875rem; */
   display: block;
   text-wrap: no-wrap;
   white-space: normal;
@@ -189,8 +196,9 @@
 .weatherDetailsRow {
   display: flex;
   justify-content: flex-start;
-  font-size: 0.85rem;
+  font-size: 14px;
   padding: 0.25rem;
+  padding-left: 0;
   /* border: 1px solid green; */
 }
 
@@ -202,6 +210,7 @@
   height: 2.5rem;
   min-width: 12.5rem;
   text-wrap: no-wrap;
+  font-size: 14px;
   border-top: 1px solid #b0b2b4;
   border-bottom: 1px solid #b0b2b4;
   /* border: 1px solid green; */
@@ -217,6 +226,7 @@
   text-wrap: no-wrap;
   text-align: start;
   word-wrap: no-wrap;
+  font-size: 14px;
   border-bottom: 1px solid #b0b2b4;
   /* border: 1px solid blue; */
 }
@@ -232,6 +242,7 @@
   margin-bottom: 0.675rem;
   min-width: 12.5rem;
   text-wrap: no-wrap;
+  font-size: 14px;
   /* border: 1px solid red; */
 }
 
@@ -328,14 +339,16 @@
 @media (max-width: 900px) {
   .chart {
     padding: 0rem;
+    margin-top: 0rem;
   }
-  .weatherByHourTimeZero {
-    /* border: 1px solid red; */
+  .chart-container {
+    padding: 0rem;
+    margin-top: 0rem;
   }
 }
 
-@media (min-width: 900px) and (max-width: 1024px) {
+/* @media (min-width: 900px) and (max-width: 1024px) {
   .chart {
     margin: 1rem;
   }
-}
+} */
